--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-	/*
-szary: #f8f9fb;
-*/
-
-
-/*Global scope styles */
 
 button {
 	background-color: transparent;
@@ -14,22 +8,15 @@ img{
 	max-width: 100%;
 }
 
-/*grid */
-
-/* .homepageContainer {
-	max-height: 980px
-}
-
-.featuresContainer {
-	max-height: 925px;
-} */
 .featuresContainer {
 	background-color: #f8f9fb;
 }
-
-
-
-/*First page styles */
+.carousel-indicators li{
+	width: 10px;
+	height:10px;
+	border:1px;
+	border-radius: 100%;
+}
 
 .firstPageRow {
 	width: auto;
